--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@angular/platform-browser-dynamic": "12.2.16",
     "@angular/router": "12.2.16",
     "@ngrx/store": "^12.5.1",
+    "ngrx/store": "*",
     "rxjs": "7.5.6",
     "tslib": "2.4.0",
     "zone.js": "0.11.8"
